--- a/app/src/App.css
+++ b/app/src/App.css
@@ -45,7 +45,7 @@ body {
   width: 75%;
 }
 .data-plane:hover {
-  top: -4em;
+  top: -6em;
 }
 .data-plane.drillable {
 }
@@ -59,6 +59,22 @@ body {
 .data-plane:hover > .data-plane-value {
   opacity: 0.8;
 }
+.data-plane-copy {
+  color: #fff;
+  cursor: pointer;
+  padding: 0.5em;
+  opacity: 0;
+  position: absolute;
+  right: 2em;
+  top: 2em;
+  z-index: 10;
+}
+.data-plane:hover > .data-plane-copy {
+  opacity: 0.5;
+}
+.data-plane-copy:hover {
+  opacity: 1;
+}
 .data-plane-key-name {
   color: #ddd;
   font-size: 3em;
@@ -69,16 +85,18 @@ body {
 }
 .drillable > .data-plane-key-name {
   color: #fff;
-  font-weight: bold;
   transition: 1s;
+}
+.data-plane:hover > .data-plane-key-name {
 }
 .data-plane-value {
   font-weight: normal;
   font-size: 1.0em;
-  background-color: #555;
   color: #ccc;
   padding: 1em;
-  border-radius: 1em;
+}
+.data-plane-value > pre {
+  border-radius: 5px;
 }
 .drillable > .data-plane-value {
   opacity: 0.2;
