--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,6 +4,11 @@ html {
 body {
   overflow: hidden;
 }
+.backdrop {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
 .canvas {
   transform-style: preserve-3d;
   perspective: 5000px;
@@ -11,7 +16,6 @@ body {
   width: 100%;
 }
 .scene {
-  transform: rotateY(-45deg) translateY(4em) translateX(-50%);
   transform-style: preserve-3d;
   text-align: center;
   width: 100%;
@@ -37,26 +41,29 @@ body {
 }
 
 .data-plane {
-  height: 100%;
+  background-color: #33333333;
   left: 0;
   position: absolute;
   top: 0;
   transition: 0.25s;
   width: 75%;
 }
-.data-plane:hover {
-  top: -6em;
-}
 .data-plane.drillable {
+  cursor: pointer;
+}
+.data-plane:hover,
+.data-plane.selected {
+  opacity: 1;
+  background-color: #333333;
 }
 .data-plane.drillable:hover {
-  cursor: pointer;
-  transform: translateY(200px);
 }
-.data-plane.drillable:hover > .data-plane-key-name {
+.data-plane.drillable:hover > .data-plane-key-name,
+.data-plane.drillable.selected > .data-plane-key-name {
   transform: translateX(1em);
 }
-.data-plane:hover > .data-plane-value {
+.data-plane:hover > .data-plane-value,
+.data-plane.selected > .data-plane-value {
   opacity: 0.8;
 }
 .data-plane-copy {
@@ -65,24 +72,25 @@ body {
   padding: 0.5em;
   opacity: 0;
   position: absolute;
-  right: 2em;
+  right: 3em;
   top: 2em;
   z-index: 10;
 }
+.data-plane.selected > .data-plane-copy,
 .data-plane:hover > .data-plane-copy {
-  opacity: 0.5;
+  opacity: 1;
 }
 .data-plane-copy:hover {
   opacity: 1;
 }
 .data-plane-key-name {
-  background-color: #222222cf;
+  background-color: #33333333;
   border-radius: 0.25em;
   color: #ddd;
   font-size: 3em;
   padding: 0.1em 0.3em;
   position: absolute;
-  top: -1.25em;
+  top: -1.5em;
   white-space: nowrap;
   z-index: 10;
 }
@@ -90,21 +98,29 @@ body {
   color: #fff;
   transition: 1s;
 }
-.data-plane:hover > .data-plane-key-name {
-  opacity: 0.9;
+.data-plane:hover > .data-plane-key-name,
+.data-plane.selected > .data-plane-key-name {
+  background-color: #333333;
+  opacity: 1;
 }
 .data-plane.drillable:hover > .data-plane-key-name {
   text-decoration: underline;
 }
 .data-plane-value {
+  height: 100%;
   font-weight: normal;
   font-size: 1.0em;
   color: #ccc;
-  padding: 1em;
+  opacity: 0.4;
 }
-.data-plane-value > pre {
+.data-plane-value-scroll-container {
+  padding: 1em;
+  overflow: auto;
+}
+.data-plane-value-scroll-container > pre {
   border-radius: 5px;
+  margin-top: 0 !important;
 }
 .drillable > .data-plane-value {
-  opacity: 0.2;
+  /* opacity: 0.2; */
 }
