--- a/app/src/App.css
+++ b/app/src/App.css
@@ -42,6 +42,7 @@ body {
 
 .data-plane {
   background-color: #33333333;
+  cursor: pointer;
   left: 0;
   position: absolute;
   top: 0;
@@ -49,7 +50,6 @@ body {
   width: 75%;
 }
 .data-plane.drillable {
-  cursor: pointer;
 }
 .data-plane:hover,
 .data-plane.selected {
@@ -84,11 +84,11 @@ body {
   opacity: 1;
 }
 .data-plane-key-name {
-  background-color: #33333333;
-  border-radius: 0.25em;
+  /* background-color: #33333333; */
+  /* border-radius: 0.25em; */
   color: #ddd;
   font-size: 3em;
-  padding: 0.1em 0.3em;
+  /* padding: 0.1em 0.3em; */
   position: absolute;
   top: -1.5em;
   white-space: nowrap;
@@ -100,7 +100,7 @@ body {
 }
 .data-plane:hover > .data-plane-key-name,
 .data-plane.selected > .data-plane-key-name {
-  background-color: #333333;
+  /* background-color: #333333; */
   opacity: 1;
 }
 .data-plane.drillable:hover > .data-plane-key-name {
@@ -120,7 +120,4 @@ body {
 .data-plane-value-scroll-container > pre {
   border-radius: 5px;
   margin-top: 0 !important;
-}
-.drillable > .data-plane-value {
-  /* opacity: 0.2; */
 }
